# CompareModelPoc

./: .black-force-format  .dockerignore  .env.development  .env.example  .env.exemple  .flake8  .gitignore  =5.9.0  Dockerfile  PRODUCTION_READY.md  README.md  TECHNICAL_DOCS.md  __init__.py  app.py  auth.py  chatbot.py  config.py  database.py  deploy_to_ovh.sh  dev-requirements.txt  docker-compose.yml  models.py  performance.py  portraits.py  pyproject.toml  pytest.ini  railway.toml  requirements.txt  run_app.py  setup.py  system_monitoring.py
.github/workflows/: ci-develop.yml
docker/: DOCKER.md  Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  CODE_INVENTORY.md  DEPLOYMENT_GUIDE.md  GUIDE_DEPLOIEMENT_VPS.md  MIGRATION_ROADMAP.md  OPTIMIZATIONS_SUMMARY.md  PORTRAIT_STORAGE.md  PROBLEMES_CONNUS.md  PROJECT_STATUS.md  QUOTA_ERROR_FIX.md  QUOTA_ERROR_FIXED.md  README.md  TECHNICAL_GUIDE.md  UI_FIXES.md  USER_GUIDE.md
nginx/: nginx.conf
requirements/: dev-requirements.txt  requirements.txt
scripts/: CORRECTIONS_APPLIQUEES.md  deploy.py  deploy.sh  dev.py  migrate_portraits.py  reset_deploy.py  setup.py  setup_quick.py  update_vps.sh
src/: __init__.py
src/ai/: __init__.py  api_client.py  chatbot.py  models_config.py  portraits.py
src/analytics/: __init__.py  performance.py  system_monitoring.py
src/auth/: __init__.py  auth.py
src/core/: __init__.py  config.py
src/data/: __init__.py  database.py  models.py
src/ui/: __init__.py  app.py
src/ui/components/: __init__.py  image_utils.py  styles.py
src/ui/pages/: auth_page.py
src/ui/views/: __init__.py  auth_page.py  campaign_page.py  character_page.py  character_page_clean.py  chatbot_page.py  dashboard_page.py  performance_page.py  settings_page.py
static/portraits/: .gitkeep
tests/: __init__.py  conftest.py  test_ai_additional.py  test_analytics.py  test_analytics_additional.py  test_analytics_performance_views.py  test_api_client.py  test_app.py  test_auth.py  test_auth_additional_missing.py  test_auth_extra_edges.py  test_auth_lines_75_144.py  test_auth_login_enhanced.py  test_auth_logout_messages.py  test_auth_register_enhanced.py  test_chatbot.py  test_chatbot_additional.py  test_chatbot_launch_flow.py  test_chatbot_page_complements.py  test_config.py  test_config_additional.py  test_core_config_additional.py  test_core_config_env_print.py  test_data_database_context.py  test_database.py  test_database_additional.py  test_database_finalize_edges.py  test_database_get_db_path_more.py  test_ia.py  test_image_generation.py  test_integration_ai.py  test_models.py  test_models_additional.py  test_models_config.py  test_models_extended.py  test_models_leftovers.py  test_models_performance_additional.py  test_performance_system_monitoring.py  test_portrait_local_storage.py  test_portraits_additional.py  (+10 more)
